Usecase-10-Policy-as-code/policies/k8sallowedregistries.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate

metadata:
  name: k8sallowedregistries

spec:
  crd:
    spec:
      names:
        kind: K8sAllowedRegistries

      validation:
        openAPIV3Schema:
          type: object
          properties:
            registries:
              type: array
              items:
                type: string

  targets:
    - target: admission.k8s.gatekeeper.sh

      rego: |
        package k8sallowedregistries

        violation[{"msg": msg}] {

          container := input.review.object.spec.template.spec.containers[_]

          image := container.image

          not startswith_allowed(image)

          msg := sprintf(
            "Container '%v' uses image from an unapproved registry: %v",
            [container.name, image]
          )
        }

        startswith_allowed(image) {

          registry := input.parameters.registries[_]

          startswith(image, registry)
        }
