Usecase-10-Policy-as-code/policies/k8sblockprivileged.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate

metadata:
  name: k8sblockprivileged

spec:
  crd:
    spec:
      names:
        kind: K8sBlockPrivileged

  targets:
    - target: admission.k8s.gatekeeper.sh

      rego: |
        package k8sblockprivileged

        violation[{"msg": msg}] {

          container := input.review.object.spec.template.spec.containers[_]

          container.securityContext.privileged == true

          msg := sprintf(
            "Privileged container detected: %v",
            [container.name]
          )

        }
