Usecase-10-Policy-as-code/policies/k8sdisallowlatest.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate

metadata:
  name: k8sdisallowlatest

spec:
  crd:
    spec:
      names:
        kind: K8sDisallowLatest

  targets:
    - target: admission.k8s.gatekeeper.sh

      rego: |
        package k8sdisallowlatest

        violation[{"msg": msg}] {

          input.review.kind.kind == "Deployment"

          container := input.review.object.spec.template.spec.containers[_]

          endswith(container.image, ":latest")

          msg := sprintf(
            "Container '%v' uses forbidden tag latest",
            [container.name]
          )

        }
