Usecase-10-Policy-as-code/policies/k8srequiredlabels.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate

metadata:
  name: k8srequiredlabels

spec:
  crd:
    spec:
      names:
        kind: K8sRequiredLabels

      validation:
        openAPIV3Schema:
          type: object
          properties:
            labels:
              type: array
              items:
                type: string

  targets:
  - target: admission.k8s.gatekeeper.sh

    rego: |
      package k8srequiredlabels

      violation[{"msg": msg}] {

        required := input.parameters.labels[_]

        not input.review.object.metadata.labels[required]

        msg := sprintf(
          "Missing required label: %v",
          [required]
        )

      }
