Usecase-10-Policy-as-code/policies/k8srequiredresources.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate

metadata:
  name: k8srequiredresources

spec:
  crd:
    spec:
      names:
        kind: K8sRequiredResources

  targets:
  - target: admission.k8s.gatekeeper.sh

    rego: |
      package k8srequiredresources

      violation[{"msg": msg}] {

        container := input.review.object.spec.template.spec.containers[_]

        not container.resources.requests.cpu

        msg := sprintf(
          "Container '%v' missing cpu request",
          [container.name]
        )

      }

      violation[{"msg": msg}] {

        container := input.review.object.spec.template.spec.containers[_]

        not container.resources.requests.memory

        msg := sprintf(
          "Container '%v' missing memory request",
          [container.name]
        )

      }

      violation[{"msg": msg}] {

        container := input.review.object.spec.template.spec.containers[_]

        not container.resources.limits.cpu

        msg := sprintf(
          "Container '%v' missing cpu limit",
          [container.name]
        )

      }

      violation[{"msg": msg}] {

        container := input.review.object.spec.template.spec.containers[_]

        not container.resources.limits.memory

        msg := sprintf(
          "Container '%v' missing memory limit",
          [container.name]
        )

      }
